--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,29 +1,32 @@
-name: Generate Snake
+name: Generate GitHub Contribution Snake
 
 on:
   # Har roz raat 12 baje chalega
   schedule:
-    - cron: "0 0 * * *" 
+    - cron: "0 0 * * *"
   
   # Manually run karne ke liye
   workflow_dispatch:
 
 jobs:
-  build:
+  generate-snake:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      # Repo checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Generate snake SVG
       - name: Generate Snake
         uses: Platane/snk@v3
         with:
-          # Tumhara GitHub username
           github_user_name: Dev-akash77
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
+      # Push generated SVGs to output branch
       - name: Push to Output Branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
